--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=physicalspaces-service
 
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:prod}
 spring.jpa.open-in-view=false
 
 server.port=8101
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=https://eureka-server-production-4492.up.railway.app/eureka
