chore: change env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.open-in-view=false
 
 server.port=8101
 
-eureka.client.service-url.defaultZone=https://eureka-server-production-4492.up.railway.app/eureka
+eureka.client.service-url.defaultZone=http://eureka-server.railway.internal:8761/eureka
